chore: 部分构建时的问题